--- a/config/virtual-hosts/joruriplus.conf
+++ b/config/virtual-hosts/joruriplus.conf
@@ -3,5 +3,5 @@
     DocumentRoot /var/share/joruriplus/public
     Alias /_common/ "/var/share/joruriplus/public/_common/"
     setenv LANG ja_JP.UTF-8
-    RackEnv development
+    RackEnv production
 </VirtualHost>
